<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/bach4" />

    <TextView
        android:id="@+id/Display3"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:layout_marginStart="190dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="90dp"
        android:text="@string/text2"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/button1"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="152dp"
        android:layout_height="83dp"
        android:layout_margin="240dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/button"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</FrameLayout>